[project]
name = "alarm"
version = "0.1.0"
description = ""
authors = [
    {name = "nish",email = "nishchup489@gmail.com"}
]
readme = "README.md"
python = ">=3.11,<3.12"
requires-python = ">=3.10.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
]

[tool.poetry]
packages = [{include = "alarm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
